Prevent text from wrapping to new line.

--- a/app/css/base.css
+++ b/app/css/base.css
@@ -36,6 +36,10 @@ span.label {
         letter-spacing: 0px;
         white-space: nowrap;
     }
+    #jumbotron .subTitle {
+        font-size: 4vw !important;
+        white-space: nowrap;
+    }
     #jumbotron img.image {
         width: 50% !important;
     }
